addded missing data fields using median for required areas

--- a/src/data_validation.ipynb
+++ b/src/data_validation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -27,10 +27,10 @@
       "year\n",
       "2019    2812\n",
       "2020    2663\n",
-      "2021    2583\n",
       "2022    2466\n",
       "2023    2450\n",
       "2024    2383\n",
+      "2021    2324\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -74,10 +74,10 @@
       "year\n",
       "2019    2812\n",
       "2020    2663\n",
-      "2021    2583\n",
       "2022    2466\n",
       "2023    2450\n",
       "2024    2383\n",
+      "2021    2324\n",
       "Name: count, dtype: int64\n",
       "\n",
       "Records per month:\n",
@@ -94,7 +94,6 @@
       "November     1264\n",
       "December     1263\n",
       "July         1059\n",
-      "0             259\n",
       "Name: count, dtype: int64\n",
       "Unique years in dataset: [2024 2023 2022 2021 2020 2019]\n"
      ]
@@ -114,116 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "🔍 Missing data detected for years: ['2019']\n",
-      "\n",
-      "\n",
-      "⚠ Detected 259 records with invalid month '0'. Removing them.\n",
-      "\n",
-      "✅ Fixed dataset saved as nhs_ae_merged_final.csv\n",
-      "\n",
-      "🔍 Checking Updated Values:\n",
-      "year\n",
-      "2019    92.479436\n",
-      "2020    85.593336\n",
-      "2021    73.787699\n",
-      "2022    62.527368\n",
-      "2023    59.900573\n",
-      "2024    58.533571\n",
-      "Name: percentage_seen_within_4_hours, dtype: float64\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/12/9jvww_b906s7rr1mrprk45v80000gn/T/ipykernel_4135/3471717145.py:31: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  nhs_data[\"a&e_attendances_type_1\"].fillna(median_attendance, inplace=True)\n",
-      "/var/folders/12/9jvww_b906s7rr1mrprk45v80000gn/T/ipykernel_4135/3471717145.py:32: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  nhs_data[\"attendances_over_4hrs_type_1\"].fillna(median_over4hrs, inplace=True)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# Load the dataset\n",
-    "file_path = \"nhs_ae_merged.csv\"\n",
-    "nhs_data = pd.read_csv(file_path)\n",
-    "\n",
-    "# Ensure 'year' is a string\n",
-    "nhs_data[\"year\"] = nhs_data[\"year\"].astype(str)\n",
-    "\n",
-    "# 🔍 Check which years have missing values\n",
-    "years_with_missing = nhs_data.loc[\n",
-    "    nhs_data[[\"a&e_attendances_type_1\", \"attendances_over_4hrs_type_1\"]].isnull().any(axis=1),\n",
-    "    \"year\"\n",
-    "].unique()\n",
-    "print(f\"\\n🔍 Missing data detected for years: {years_with_missing}\\n\")\n",
-    "\n",
-    "# 🛠 **1. Fill Missing Values Based on Other Years (Synthetic Data)**\n",
-    "# Use the median values from 2020-2024 for estimation\n",
-    "median_attendance = nhs_data.loc[\n",
-    "    nhs_data[\"year\"].isin([\"2020\", \"2021\", \"2022\", \"2023\", \"2024\"]),\n",
-    "    \"a&e_attendances_type_1\"\n",
-    "].median()\n",
-    "\n",
-    "median_over4hrs = nhs_data.loc[\n",
-    "    nhs_data[\"year\"].isin([\"2020\", \"2021\", \"2022\", \"2023\", \"2024\"]),\n",
-    "    \"attendances_over_4hrs_type_1\"\n",
-    "].median()\n",
-    "\n",
-    "# Fill missing values with synthetic estimates\n",
-    "nhs_data[\"a&e_attendances_type_1\"].fillna(median_attendance, inplace=True)\n",
-    "nhs_data[\"attendances_over_4hrs_type_1\"].fillna(median_over4hrs, inplace=True)\n",
-    "\n",
-    "# 🛠 **2. Fix `percentage_seen_within_4_hours`**\n",
-    "nhs_data[\"percentage_seen_within_4_hours\"] = (\n",
-    "    (nhs_data[\"a&e_attendances_type_1\"] - nhs_data[\"attendances_over_4hrs_type_1\"]) /\n",
-    "    nhs_data[\"a&e_attendances_type_1\"]\n",
-    ") * 100\n",
-    "\n",
-    "# Clip values to be within [0, 100]\n",
-    "nhs_data[\"percentage_seen_within_4_hours\"] = nhs_data[\"percentage_seen_within_4_hours\"].clip(0, 100)\n",
-    "\n",
-    "# 🛠 **3. Fix Incorrect `month` Labels**\n",
-    "# Remove or fix records with an invalid \"0\" month\n",
-    "invalid_months = nhs_data[nhs_data[\"month\"] == \"0\"].shape[0]\n",
-    "if invalid_months > 0:\n",
-    "    print(f\"\\n⚠ Detected {invalid_months} records with invalid month '0'. Removing them.\")\n",
-    "    nhs_data = nhs_data[nhs_data[\"month\"] != \"0\"]\n",
-    "\n",
-    "# ✅ **4. Save the Updated Dataset**\n",
-    "output_file = \"nhs_ae_merged_final.csv\"\n",
-    "nhs_data.to_csv(output_file, index=False)\n",
-    "print(f\"\\n✅ Fixed dataset saved as {output_file}\")\n",
-    "\n",
-    "# ✅ **5. Validate Fixes**\n",
-    "print(\"\\n🔍 Checking Updated Values:\")\n",
-    "print(nhs_data.groupby(\"year\")[\"percentage_seen_within_4_hours\"].mean())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -539,6 +429,89 @@
     "plt.legend(title=\"Year\")\n",
     "plt.grid(True)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔍 Missing Data Summary (Before Fixing):\n",
+      " percentage_seen_within_4_hours                          5267\n",
+      "number_of_a&e_attendances_type_1                        9623\n",
+      "number_of_a&e_attendances_type_2                        9623\n",
+      "number_of_a&e_attendances_other_a&e_department          9623\n",
+      "number_of_attendances_over_4hrs_type_1                  9623\n",
+      "number_of_attendances_over_4hrs_type_2                  9623\n",
+      "number_of_attendances_over_4hrs_other_a&e_department    9623\n",
+      "dtype: int64\n",
+      "\n",
+      "✅ Missing Data Summary (After Fixing):\n",
+      " number_of_a&e_attendances_type_1          3\n",
+      "number_of_attendances_over_4hrs_type_1    3\n",
+      "dtype: int64\n",
+      "\n",
+      "📁 Cleaned dataset saved as nhs_ae_merged_fixed.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/12/9jvww_b906s7rr1mrprk45v80000gn/T/ipykernel_4135/1274446034.py:23: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  nhs_data[col].fillna(median_values[col], inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load the dataset\n",
+    "file_path = \"nhs_ae_merged_no_outliers.csv\"\n",
+    "nhs_data = pd.read_csv(file_path)\n",
+    "\n",
+    "# Ensure 'year' is treated as a string\n",
+    "nhs_data[\"year\"] = nhs_data[\"year\"].astype(str)\n",
+    "\n",
+    "# 🔍 Identify Missing Data\n",
+    "missing_counts = nhs_data.isnull().sum()\n",
+    "print(\"\\n🔍 Missing Data Summary (Before Fixing):\\n\", missing_counts[missing_counts > 0])\n",
+    "\n",
+    "# ✅ **1. Fill Missing Values Using Median from Recent Years (2020-2024)**\n",
+    "numeric_columns = nhs_data.select_dtypes(include=[np.number]).columns\n",
+    "median_values = nhs_data.loc[\n",
+    "    nhs_data[\"year\"].isin([\"2020\", \"2021\", \"2022\", \"2023\", \"2024\"]), numeric_columns\n",
+    "].median()\n",
+    "\n",
+    "for col in missing_counts[missing_counts > 0].index:\n",
+    "    if col in numeric_columns:\n",
+    "        nhs_data[col].fillna(median_values[col], inplace=True)\n",
+    "\n",
+    "# ✅ **2. Fix Monthly Trends Using Interpolation**\n",
+    "nhs_data.sort_values(by=[\"year\", \"month\"], inplace=True)  # Ensure data is sorted\n",
+    "for col in [\"number_of_a&e_attendances_type_1\", \"number_of_attendances_over_4hrs_type_1\"]:\n",
+    "    nhs_data[col] = nhs_data[col].replace(0, np.nan)  # Replace zeros with NaN\n",
+    "    nhs_data[col] = nhs_data[col].interpolate()  # Interpolate missing values\n",
+    "\n",
+    "# 🔍 **Recheck Missing Data After Fix**\n",
+    "missing_counts_after = nhs_data.isnull().sum()\n",
+    "print(\"\\n✅ Missing Data Summary (After Fixing):\\n\", missing_counts_after[missing_counts_after > 0])\n",
+    "\n",
+    "# ✅ **Save Cleaned Dataset**\n",
+    "output_file = \"nhs_ae_merged_fixed.csv\"\n",
+    "nhs_data.to_csv(output_file, index=False)\n",
+    "print(f\"\\n📁 Cleaned dataset saved as {output_file}\")\n"
    ]
   }
  ],
