Checking for Trends in Time-Series Data

--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -210,8 +210,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploratory Data Analysis (EDA): Statistical Summary & Data Distribution\n",
+    "#### **Why?**\n",
+    "Before training machine learning models, it's crucial to **understand the dataset's structure**. We:\n",
+    "- **Generated summary statistics** (mean, median, min, max, standard deviation).\n",
+    "- **Checked skewness & kurtosis** to understand data distribution.\n",
+    "- **Plotted boxplots** to detect **outliers** in numerical features.\n",
+    "\n",
+    "#### **Key Insights:**\n",
+    "- **Skewness > 1 or < -1** → Indicates highly skewed distributions.\n",
+    "- **High kurtosis (>3)** → Indicates heavy-tailed distributions, meaning more extreme values (outliers).\n",
+    "- Boxplots reveal **which features contain extreme values**, guiding feature transformation strategies.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
