Flagged real-world anomalies in A&E attendance, removed/imputed data errors, and added 'is_anomaly' column.

--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -693,6 +693,162 @@
     "- 🏥 **Real-world anomalies** (e.g., **COVID-19 spikes** and **seasonal trends**) might explain some of these outliers.\n",
     "- ❗ Some **outliers could be data errors**, requiring further investigation.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Flag Real-World Anomalies\n",
+    "I'll add a new column, is_anomaly, where:\n",
+    "\n",
+    "1 indicates an anomaly (Z-score > 3)\n",
+    "0 indicates normal data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📁 Dataset with flagged anomalies saved as: nhs_ae_outliers_flagged.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Flag real-world anomalies (Z-score > 3)\n",
+    "nhs_data[\"is_anomaly\"] = (nhs_data[\"attendance_zscore\"] > 3).astype(int)\n",
+    "\n",
+    "# Save dataset with flagged anomalies\n",
+    "flagged_file = \"nhs_ae_outliers_flagged.csv\"\n",
+    "nhs_data.to_csv(flagged_file, index=False)\n",
+    "\n",
+    "print(f\"📁 Dataset with flagged anomalies saved as: {flagged_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Identify Potential Data Errors\n",
+    "- Before removing errors, check if any outliers seem unrealistic or due to data corruption.\n",
+    "- print extreme values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔍 Extreme High Values:\n",
+      "             date  total_a&e_attendances  is_anomaly\n",
+      "11950 2024-05-01              2331010.0           1\n",
+      "11752 2024-03-01              2289703.0           1\n",
+      "12346 2024-10-01              2276363.0           1\n",
+      "10757 2024-12-01              2258452.0           1\n",
+      "11356 2024-07-01              2251330.0           1\n",
+      "12148 2024-11-01              2231080.0           1\n",
+      "5856  2022-12-01              2221234.0           1\n",
+      "11554 2024-06-01              2215640.0           1\n",
+      "9549  2023-05-01              2171767.0           1\n",
+      "10359 2024-04-01              2163149.0           1\n",
+      "\n",
+      "🔍 Extreme Low Values:\n",
+      "           date  total_a&e_attendances  is_anomaly\n",
+      "217 2020-04-01                    0.0           0\n",
+      "216 2020-04-01                    0.0           0\n",
+      "215 2020-04-01                    0.0           0\n",
+      "214 2020-04-01                    0.0           0\n",
+      "205 2020-04-01                    0.0           0\n",
+      "140 2020-04-01                    0.0           0\n",
+      "129 2020-04-01                    0.0           0\n",
+      "169 2020-04-01                    0.0           0\n",
+      "94  2020-04-01                    0.0           0\n",
+      "108 2020-04-01                    0.0           0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check extreme high values\n",
+    "print(\"🔍 Extreme High Values:\\n\", nhs_data.nlargest(10, \"total_a&e_attendances\")[[\"date\", \"total_a&e_attendances\", \"is_anomaly\"]])\n",
+    "\n",
+    "# Check extreme low values (potential errors)\n",
+    "print(\"\\n🔍 Extreme Low Values:\\n\", nhs_data.nsmallest(10, \"total_a&e_attendances\")[[\"date\", \"total_a&e_attendances\", \"is_anomaly\"]])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Remove Potential Errors\n",
+    "Now, remove only the clearly incorrect values (e.g., negative or zero attendances):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📁 Dataset with errors removed saved as: nhs_ae_cleaned_no_errors.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove invalid data (negative or zero values)\n",
+    "nhs_data_cleaned = nhs_data[nhs_data[\"total_a&e_attendances\"] > 0]\n",
+    "\n",
+    "# Save cleaned dataset\n",
+    "cleaned_file = \"nhs_ae_cleaned_no_errors.csv\"\n",
+    "nhs_data_cleaned.to_csv(cleaned_file, index=False)\n",
+    "\n",
+    "print(f\"📁 Dataset with errors removed saved as: {cleaned_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Impute Data Where Necessary\n",
+    "For remaining extreme values, replace them with the median:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📁 Final dataset for ML saved as: nhs_ae_final_for_ml.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute median of non-outlier values\n",
+    "median_value = nhs_data_cleaned[nhs_data_cleaned[\"is_anomaly\"] == 0][\"total_a&e_attendances\"].median()\n",
+    "\n",
+    "# Replace extreme outliers with median\n",
+    "nhs_data_cleaned.loc[nhs_data_cleaned[\"is_anomaly\"] == 1, \"total_a&e_attendances\"] = median_value\n",
+    "\n",
+    "# Save final dataset for ML\n",
+    "final_file = \"nhs_ae_final_for_ml.csv\"\n",
+    "nhs_data_cleaned.to_csv(final_file, index=False)\n",
+    "\n",
+    "print(f\"📁 Final dataset for ML saved as: {final_file}\")\n"
+   ]
   }
  ],
  "metadata": {
