verifyed the data set and added Feature Engineering

--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -849,6 +849,295 @@
     "\n",
     "print(f\"📁 Final dataset for ML saved as: {final_file}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verify the Final Dataset (Quick Check)\n",
+    "Before moving forward, confirm: \n",
+    "- The dataset has the correct number of rows and columns\n",
+    "- There are no missing values (NaN)\n",
+    "- The outliers were handled properly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔍 Missing Values:\n",
+      " period                                                        0\n",
+      "org_code                                                      0\n",
+      "parent_org                                                    0\n",
+      "org_name                                                      0\n",
+      "a&e_attendances_booked_appointments_type_1                    0\n",
+      "a&e_attendances_booked_appointments_type_2                    0\n",
+      "a&e_attendances_booked_appointments_other_department          0\n",
+      "attendances_over_4hrs_type_1                                  0\n",
+      "attendances_over_4hrs_type_2                                  0\n",
+      "attendances_over_4hrs_other_department                        0\n",
+      "attendances_over_4hrs_booked_appointments_type_1              0\n",
+      "attendances_over_4hrs_booked_appointments_type_2              0\n",
+      "attendances_over_4hrs_booked_appointments_other_department    0\n",
+      "patients_who_have_waited_4-12_hs_from_dta_to_admission        0\n",
+      "patients_who_have_waited_12+_hrs_from_dta_to_admission        0\n",
+      "emergency_admissions_via_a&e_-_type_1                         0\n",
+      "emergency_admissions_via_a&e_-_type_2                         0\n",
+      "emergency_admissions_via_a&e_-_other_a&e_department           0\n",
+      "other_emergency_admissions                                    0\n",
+      "month                                                         0\n",
+      "year                                                          0\n",
+      "number_of_a&e_attendances_type_1                              0\n",
+      "number_of_a&e_attendances_type_2                              0\n",
+      "number_of_a&e_attendances_other_a&e_department                0\n",
+      "number_of_attendances_over_4hrs_type_1                        0\n",
+      "number_of_attendances_over_4hrs_type_2                        0\n",
+      "number_of_attendances_over_4hrs_other_a&e_department          0\n",
+      "total_a&e_attendances                                         0\n",
+      "date                                                          0\n",
+      "attendance_zscore                                             0\n",
+      "is_outlier                                                    0\n",
+      "is_anomaly                                                    0\n",
+      "dtype: int64\n",
+      "\n",
+      "✅ Dataset Shape: (11504, 32)\n",
+      "\n",
+      "📊 Descriptive Statistics:\n",
+      "        a&e_attendances_booked_appointments_type_1  \\\n",
+      "count                                11504.000000   \n",
+      "mean                                   253.648818   \n",
+      "std                                   1978.788445   \n",
+      "min                                      0.000000   \n",
+      "25%                                      0.000000   \n",
+      "50%                                      0.000000   \n",
+      "75%                                    107.000000   \n",
+      "max                                  43067.000000   \n",
+      "\n",
+      "       a&e_attendances_booked_appointments_type_2  \\\n",
+      "count                                11504.000000   \n",
+      "mean                                     3.503651   \n",
+      "std                                     45.442953   \n",
+      "min                                      0.000000   \n",
+      "25%                                      0.000000   \n",
+      "50%                                      0.000000   \n",
+      "75%                                      0.000000   \n",
+      "max                                   1828.000000   \n",
+      "\n",
+      "       a&e_attendances_booked_appointments_other_department  \\\n",
+      "count                                       11504.000000      \n",
+      "mean                                          340.154468      \n",
+      "std                                          2752.218824      \n",
+      "min                                             0.000000      \n",
+      "25%                                             0.000000      \n",
+      "50%                                             0.000000      \n",
+      "75%                                            69.250000      \n",
+      "max                                         54131.000000      \n",
+      "\n",
+      "       attendances_over_4hrs_type_1  attendances_over_4hrs_type_2  \\\n",
+      "count                  11504.000000                  11504.000000   \n",
+      "mean                    4203.938630                     11.629172   \n",
+      "std                    32079.718249                     99.992862   \n",
+      "min                        0.000000                      0.000000   \n",
+      "25%                        0.000000                      0.000000   \n",
+      "50%                      971.000000                      0.000000   \n",
+      "75%                     3656.250000                      0.000000   \n",
+      "max                   633815.000000                   2370.000000   \n",
+      "\n",
+      "       attendances_over_4hrs_other_department  \\\n",
+      "count                            11504.000000   \n",
+      "mean                               224.089708   \n",
+      "std                               1911.056973   \n",
+      "min                                  0.000000   \n",
+      "25%                                  0.000000   \n",
+      "50%                                  1.000000   \n",
+      "75%                                 69.000000   \n",
+      "max                              76062.000000   \n",
+      "\n",
+      "       attendances_over_4hrs_booked_appointments_type_1  \\\n",
+      "count                                      11504.000000   \n",
+      "mean                                          51.771558   \n",
+      "std                                          425.763125   \n",
+      "min                                            0.000000   \n",
+      "25%                                            0.000000   \n",
+      "50%                                            0.000000   \n",
+      "75%                                            1.000000   \n",
+      "max                                         9567.000000   \n",
+      "\n",
+      "       attendances_over_4hrs_booked_appointments_type_2  \\\n",
+      "count                                      11504.000000   \n",
+      "mean                                           0.052677   \n",
+      "std                                            0.800877   \n",
+      "min                                            0.000000   \n",
+      "25%                                            0.000000   \n",
+      "50%                                            0.000000   \n",
+      "75%                                            0.000000   \n",
+      "max                                           25.000000   \n",
+      "\n",
+      "       attendances_over_4hrs_booked_appointments_other_department  \\\n",
+      "count                                       11504.000000            \n",
+      "mean                                            5.905598            \n",
+      "std                                            55.513012            \n",
+      "min                                             0.000000            \n",
+      "25%                                             0.000000            \n",
+      "50%                                             0.000000            \n",
+      "75%                                             0.000000            \n",
+      "max                                          1478.000000            \n",
+      "\n",
+      "       patients_who_have_waited_4-12_hs_from_dta_to_admission  ...  \\\n",
+      "count                                       11504.000000       ...   \n",
+      "mean                                          875.784597       ...   \n",
+      "std                                          6381.738009       ...   \n",
+      "min                                             0.000000       ...   \n",
+      "25%                                             0.000000       ...   \n",
+      "50%                                           235.000000       ...   \n",
+      "75%                                           695.000000       ...   \n",
+      "max                                        115548.000000       ...   \n",
+      "\n",
+      "       number_of_a&e_attendances_type_1  number_of_a&e_attendances_type_2  \\\n",
+      "count                      1.150400e+04                      1.150400e+04   \n",
+      "mean                       2.686827e+03                      9.573263e+01   \n",
+      "std                        4.547671e-13                      1.421147e-14   \n",
+      "min                        2.686827e+03                      9.573263e+01   \n",
+      "25%                        2.686827e+03                      9.573263e+01   \n",
+      "50%                        2.686827e+03                      9.573263e+01   \n",
+      "75%                        2.686827e+03                      9.573263e+01   \n",
+      "max                        2.686827e+03                      9.573263e+01   \n",
+      "\n",
+      "       number_of_a&e_attendances_other_a&e_department  \\\n",
+      "count                                    1.150400e+04   \n",
+      "mean                                     1.435391e+03   \n",
+      "std                                      4.547671e-13   \n",
+      "min                                      1.435391e+03   \n",
+      "25%                                      1.435391e+03   \n",
+      "50%                                      1.435391e+03   \n",
+      "75%                                      1.435391e+03   \n",
+      "max                                      1.435391e+03   \n",
+      "\n",
+      "       number_of_attendances_over_4hrs_type_1  \\\n",
+      "count                            1.150400e+04   \n",
+      "mean                             6.365918e+02   \n",
+      "std                              1.136918e-13   \n",
+      "min                              6.365918e+02   \n",
+      "25%                              6.365918e+02   \n",
+      "50%                              6.365918e+02   \n",
+      "75%                              6.365918e+02   \n",
+      "max                              6.365918e+02   \n",
+      "\n",
+      "       number_of_attendances_over_4hrs_type_2  \\\n",
+      "count                            1.150400e+04   \n",
+      "mean                             1.041682e+00   \n",
+      "std                              4.441085e-16   \n",
+      "min                              1.041682e+00   \n",
+      "25%                              1.041682e+00   \n",
+      "50%                              1.041682e+00   \n",
+      "75%                              1.041682e+00   \n",
+      "max                              1.041682e+00   \n",
+      "\n",
+      "       number_of_attendances_over_4hrs_other_a&e_department  \\\n",
+      "count                                       1.150400e+04      \n",
+      "mean                                        1.642884e+01      \n",
+      "std                                         3.552868e-15      \n",
+      "min                                         1.642884e+01      \n",
+      "25%                                         1.642884e+01      \n",
+      "50%                                         1.642884e+01      \n",
+      "75%                                         1.642884e+01      \n",
+      "max                                         1.642884e+01      \n",
+      "\n",
+      "       total_a&e_attendances  attendance_zscore    is_outlier    is_anomaly  \n",
+      "count           11504.000000       11504.000000  11504.000000  11504.000000  \n",
+      "mean            10549.546259           0.145485      0.004868      0.004868  \n",
+      "std              8105.027681           1.022515      0.069603      0.069603  \n",
+      "min                 1.000000           0.000020      0.000000      0.000000  \n",
+      "25%              3685.500000           0.036250      0.000000      0.000000  \n",
+      "50%              9378.000000           0.075828      0.000000      0.000000  \n",
+      "75%             16214.750000           0.116901      0.000000      0.000000  \n",
+      "max             46062.000000          17.556799      1.000000      1.000000  \n",
+      "\n",
+      "[8 rows x 26 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the final cleaned dataset\n",
+    "file_path = \"nhs_ae_final_for_ml.csv\"\n",
+    "nhs_data_final = pd.read_csv(file_path)\n",
+    "\n",
+    "# Check for missing values\n",
+    "print(\"\\n🔍 Missing Values:\\n\", nhs_data_final.isna().sum())\n",
+    "\n",
+    "# Check the number of rows and columns\n",
+    "print(f\"\\n✅ Dataset Shape: {nhs_data_final.shape}\")\n",
+    "\n",
+    "# Check if outliers were handled\n",
+    "print(\"\\n📊 Descriptive Statistics:\\n\", nhs_data_final.describe())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Engineering: Create Useful Features\n",
+    "Machine learning models work best when we give them meaningful inputs.\n",
+    "\n",
+    "- Time-Based Features: Extract month, year, season\n",
+    "- Rolling Averages: Compute a 3-month moving average to capture trends\n",
+    "- Lag Features: Use past attendance values as predictors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📁 Feature-engineered dataset saved as 'nhs_ae_features.csv'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/12/9jvww_b906s7rr1mrprk45v80000gn/T/ipykernel_37448/3734113091.py:19: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  nhs_data_final.fillna(method=\"bfill\", inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert 'date' column to datetime format\n",
+    "nhs_data_final[\"date\"] = pd.to_datetime(nhs_data_final[\"date\"])\n",
+    "\n",
+    "# Extract time-based features\n",
+    "nhs_data_final[\"month\"] = nhs_data_final[\"date\"].dt.month\n",
+    "nhs_data_final[\"year\"] = nhs_data_final[\"date\"].dt.year\n",
+    "nhs_data_final[\"season\"] = nhs_data_final[\"month\"].map({12: \"Winter\", 1: \"Winter\", 2: \"Winter\",\n",
+    "                                                        3: \"Spring\", 4: \"Spring\", 5: \"Spring\",\n",
+    "                                                        6: \"Summer\", 7: \"Summer\", 8: \"Summer\",\n",
+    "                                                        9: \"Autumn\", 10: \"Autumn\", 11: \"Autumn\"})\n",
+    "\n",
+    "# Create a rolling 3-month average for A&E attendances\n",
+    "nhs_data_final[\"attendance_rolling_avg\"] = nhs_data_final[\"total_a&e_attendances\"].rolling(window=3, min_periods=1).mean()\n",
+    "\n",
+    "# Create a lag feature (previous month's attendance)\n",
+    "nhs_data_final[\"attendance_lag_1\"] = nhs_data_final[\"total_a&e_attendances\"].shift(1)\n",
+    "\n",
+    "# Fill NaN values (for first row with lag)\n",
+    "nhs_data_final.fillna(method=\"bfill\", inplace=True)\n",
+    "\n",
+    "# Save the updated dataset\n",
+    "nhs_data_final.to_csv(\"nhs_ae_features.csv\", index=False)\n",
+    "print(\"📁 Feature-engineered dataset saved as 'nhs_ae_features.csv'\")\n"
+   ]
   }
  ],
  "metadata": {
