--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -1138,6 +1138,48 @@
     "nhs_data_final.to_csv(\"nhs_ae_features.csv\", index=False)\n",
     "print(\"📁 Feature-engineered dataset saved as 'nhs_ae_features.csv'\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train-Test Split & Scaling\n",
+    "- Train-test split: 80% of the data for training, 20% for testing\n",
+    "- Feature scaling: Normalize values to improve model performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Data split and scaled successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# Define features (X) and target variable (y)\n",
+    "features = [\"month\", \"year\", \"attendance_rolling_avg\", \"attendance_lag_1\"]\n",
+    "X = nhs_data_final[features]\n",
+    "y = nhs_data_final[\"total_a&e_attendances\"]\n",
+    "\n",
+    "# Split data into training (80%) and testing (20%)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, shuffle=False)\n",
+    "\n",
+    "# Scale the features\n",
+    "scaler = MinMaxScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "print(\"✅ Data split and scaled successfully!\")\n"
+   ]
   }
  ],
  "metadata": {
