Comparing Different Machine Learning Models

--- a/src/data_validation.ipynb
+++ b/src/data_validation.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,18 +168,18 @@
       "\n",
       "🔍 Checking 2020 Monthly Totals:\n",
       "month\n",
-      "April        3575000.0\n",
-      "August       3923250.0\n",
-      "December     3605148.0\n",
-      "February     2460242.0\n",
-      "January      2527122.0\n",
-      "July               inf\n",
-      "June         4153624.0\n",
-      "March        3244604.0\n",
-      "May          3965348.0\n",
-      "November     3922128.0\n",
-      "October      4174350.0\n",
-      "September    4110338.0\n",
+      "April        1.833150e+06\n",
+      "August       3.397056e+06\n",
+      "December     2.869508e+06\n",
+      "February     3.882385e+06\n",
+      "January      3.984055e+06\n",
+      "July         3.176572e+06\n",
+      "June         2.821204e+06\n",
+      "March        4.530280e+06\n",
+      "May          2.523674e+06\n",
+      "November     2.914400e+06\n",
+      "October      3.149760e+06\n",
+      "September    3.340750e+06\n",
       "Name: total_a&e_attendances, dtype: float64\n"
      ]
     }
