--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -1247,18 +1247,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linear Regression - MSE: 33412823.02, R²: 0.59\n",
-      "Random Forest Regressor - MSE: 36055484.58, R²: 0.56\n",
-      "XGBoost Regressor - MSE: 37359422.76, R²: 0.54\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1272,18 +1263,25 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m72/72\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step  \n",
-      "LSTM Model - MSE: 217501410.67, R²: -1.68\n"
+      "\n",
+      "Model Performance Comparison:\n",
+      "\n",
+      "                  Model          MSE  R² Score\n",
+      "      Linear Regression  33412823.02      0.59\n",
+      "Random Forest Regressor  36055484.58      0.56\n",
+      "      XGBoost Regressor  37359422.76      0.54\n",
+      "             LSTM Model 217547905.21     -1.68\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from xgboost import XGBRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import LSTM, Dense\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "import numpy as np\n",
     "\n",
     "# Function to evaluate each model\n",
@@ -1303,12 +1301,15 @@
     "    \"XGBoost Regressor\": XGBRegressor(n_estimators=100, random_state=42)\n",
     "}\n",
     "\n",
+    "# Dictionary to store results\n",
+    "results = []\n",
+    "\n",
     "# Loop through the models and evaluate\n",
     "for model_name, model in models.items():\n",
     "    mse, r2 = evaluate_model(model, X_train_scaled, X_test_scaled, y_train, y_test)\n",
-    "    print(f\"{model_name} - MSE: {mse:.2f}, R²: {r2:.2f}\")\n",
+    "    results.append({\"Model\": model_name, \"MSE\": round(mse, 2), \"R² Score\": round(r2, 2)})\n",
     "\n",
-    "# Now let's build and evaluate the LSTM model (deep learning)\n",
+    "# LSTM Model Evaluation\n",
     "# Prepare data for LSTM (reshape X_train and X_test to 3D)\n",
     "X_train_lstm = np.array(X_train_scaled).reshape((X_train_scaled.shape[0], X_train_scaled.shape[1], 1))\n",
     "X_test_lstm = np.array(X_test_scaled).reshape((X_test_scaled.shape[0], X_test_scaled.shape[1], 1))\n",
@@ -1328,7 +1329,13 @@
     "mse_lstm = mean_squared_error(y_test, y_pred_lstm)\n",
     "r2_lstm = r2_score(y_test, y_pred_lstm)\n",
     "\n",
-    "print(f\"LSTM Model - MSE: {mse_lstm:.2f}, R²: {r2_lstm:.2f}\")\n"
+    "# Append LSTM results to the table\n",
+    "results.append({\"Model\": \"LSTM Model\", \"MSE\": round(mse_lstm, 2), \"R² Score\": round(r2_lstm, 2)})\n",
+    "\n",
+    "# Convert results into a Pandas DataFrame and display it\n",
+    "results_df = pd.DataFrame(results)\n",
+    "print(\"\\nModel Performance Comparison:\\n\")\n",
+    "print(results_df.to_string(index=False))\n"
    ]
   }
  ],
