--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -2113,6 +2113,43 @@
     "print(f\"Best Parameters: {grid_search.best_params_}\")\n",
     "print(f\"Best MSE Score: {abs(grid_search.best_score_)}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final Random Forest Model - MSE: 34441208.48, R² Score: 0.58\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the best model using the optimal parameters\n",
+    "best_rf = RandomForestRegressor(\n",
+    "    max_depth=5,\n",
+    "    min_samples_leaf=1,\n",
+    "    min_samples_split=10,\n",
+    "    n_estimators=200,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Fit the model on training data\n",
+    "best_rf.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Make predictions on test data\n",
+    "y_pred_rf = best_rf.predict(X_test_scaled)\n",
+    "\n",
+    "# Evaluate performance\n",
+    "mse_rf = mean_squared_error(y_test, y_pred_rf)\n",
+    "r2_rf = r2_score(y_test, y_pred_rf)\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"Final Random Forest Model - MSE: {mse_rf:.2f}, R² Score: {r2_rf:.2f}\")\n"
+   ]
   }
  ],
  "metadata": {
