--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -1467,11 +1467,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Predictions saved to public/data/predictions.json\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "import json\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Compute performance metrics\n",
+    "mse_rf_reduced = mean_squared_error(y_test, y_pred_rf_reduced)\n",
+    "r2_rf_reduced = r2_score(y_test, y_pred_rf_reduced)\n",
+    "\n",
+    "# Convert values to standard Python float types\n",
+    "mse_rf_reduced = float(mse_rf_reduced)\n",
+    "r2_rf_reduced = float(r2_rf_reduced)\n",
+    "\n",
+    "# Convert actual vs. predicted values to DataFrame\n",
+    "predictions_df = pd.DataFrame({\n",
+    "    'Actual': y_test.tolist(),  # ✅ Convert Series to list\n",
+    "    'Predicted': y_pred_rf_reduced.tolist()  # ✅ Convert Series to list\n",
+    "})\n",
+    "\n",
+    "# Create the final dictionary\n",
+    "final_data = {\n",
+    "    \"predictions\": predictions_df.to_dict(orient=\"records\"),\n",
+    "    \"mse\": mse_rf_reduced,\n",
+    "    \"r2\": r2_rf_reduced\n",
+    "}\n",
+    "\n",
+    "# Define output path\n",
+    "output_dir = \"public/data\"\n",
+    "output_path = os.path.join(output_dir, \"predictions.json\")\n",
+    "\n",
+    "# ✅ Ensure the directory exists\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "# ✅ Save JSON file\n",
+    "with open(output_path, \"w\") as f:\n",
+    "    json.dump(final_data, f, indent=4)  # Adds indentation for readability\n",
+    "\n",
+    "print(f\"✅ Predictions saved to {output_path}\")\n"
    ]
   }
  ],
