--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -1,8 +1,63 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A&E Data Predictions - Data Cleaning & Model Preparation\n",
+    "\n",
+    "## Overview:\n",
+    "This script processes raw NHS A&E attendance data, applies data cleaning, \n",
+    "performs exploratory data analysis (EDA), and prepares the dataset for machine learning models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🔹 Step 1: Importing Required Libraries\n",
+    "I will start by importing all the required libraries for data processing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Handling & Processing\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Statistical Analysis\n",
+    "from scipy.stats import skew, kurtosis, zscore\n",
+    "\n",
+    "# Machine Learning & Model Evaluation\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Deep Learning (for LSTM model)\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense\n",
+    "\n",
+    "# Saving Predictions for Website Integration\n",
+    "import json\n",
+    "import os\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
