added manim for adding more visuals

--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,7 @@
     "# Visualization\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from manim import *\n",
     "\n",
     "# Statistical Analysis\n",
     "from scipy.stats import skew, kurtosis, zscore\n",
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -158,31 +159,31 @@
     "plt.title(\"⚠️ Missing Values Heatmap (Before Cleaning)\")\n",
     "plt.show()\n",
     "\n",
-    "# 🔹 Convert 'year' to string for consistency\n",
+    "# Convert 'year' to string for consistency\n",
     "nhs_data[\"year\"] = nhs_data[\"year\"].astype(str)\n",
     "\n",
-    "# 🔹 Convert 'month' to a categorical variable (ensuring proper order)\n",
+    "# Convert 'month' to a categorical variable (ensuring proper order)\n",
     "month_order = [\n",
     "    \"January\", \"February\", \"March\", \"April\", \"May\", \"June\",\n",
     "    \"July\", \"August\", \"September\", \"October\", \"November\", \"December\"\n",
     "]\n",
     "nhs_data[\"month\"] = pd.Categorical(nhs_data[\"month\"], categories=month_order, ordered=True)\n",
     "\n",
-    "# 🔹 Handle missing months by extracting from 'period' if available\n",
+    "# Handle missing months by extracting from 'period' if available\n",
     "missing_months_before = nhs_data[\"month\"].isna().sum()\n",
     "if missing_months_before > 0:\n",
     "    nhs_data.loc[nhs_data[\"month\"].isna(), \"month\"] = nhs_data[\"period\"].str.extract(r'-(\\w+)-')[0]\n",
     "\n",
-    "# 🔹 Drop rows where 'month' is still missing\n",
+    "# Drop rows where 'month' is still missing\n",
     "nhs_data.dropna(subset=[\"month\"], inplace=True)\n",
     "\n",
-    "# 🔹 Convert 'year' and 'month' into a proper date format for time-series analysis\n",
+    "# Convert 'year' and 'month' into a proper date format for time-series analysis\n",
     "nhs_data[\"date\"] = pd.to_datetime(nhs_data[\"year\"] + \"-\" + nhs_data[\"month\"].astype(str), format=\"%Y-%B\")\n",
     "\n",
-    "# 🔹 Sort dataset by date\n",
+    "# Sort dataset by date\n",
     "nhs_data = nhs_data.sort_values(by=\"date\")\n",
     "\n",
-    "# 🔹 Visualizing Cleaned Dataset\n",
+    "# Visualizing Cleaned Dataset\n",
     "plt.figure(figsize=(12, 6))\n",
     "sns.lineplot(data=nhs_data, x=\"date\", y=\"total_a&e_attendances\", marker=\"o\", color=\"blue\")\n",
     "plt.title(\"📈 A&E Attendances Over Time (After Cleaning)\")\n",
